# selenium-ide-ai-side-builder

./: README.md  builder.py  common.py  demo1.py  demo1_async.py  demo1_sel_sync.py  demo1_step_1.side  demo1_step_2.side  demo1_step_3.side  demo1_step_4.side  demo1_step_5.side  demo1_step_6.side  demo1_step_7.side  demo1_sync.py  demo2_async.py  demo2_sync.py  pyproject.toml  selenium_ide_ai_helper.py  selenium_ide_async_player.py  selenium_ide_sync_player.py
examples/resize-screen/: README.md  resize_screen_async.py  resize_screen_sel_sync.py  resize_screen_sync.py
examples/resize-screen/sides/: resize_screen_step_1.side  resize_screen_step_2.side
examples/saucedemo/login-cart-order-logout/: README.md
examples/saucedemo/login-logout/: README.md
sides/: demo1_step_1.side  demo1_step_2.side  demo1_step_3.side  demo1_step_4.side  demo1_step_5.side  demo1_step_6.side  demo1_step_7.side  demo1_step_8.side  demo1_step_9.side  demo2_step_1.side  demo2_step_2.side
src/side_player/: builder.py  common.py
src/side_player/playwright/: async_api.py  sync_api.py
src/side_player/selenium/: sync_api.py
