[project]
name = "side-builder"
version = "0.1.0"
description = "Tool 'side-builder' and API 'play_side()' or 'play_side_async()'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "openai>=2.24.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
]

[dependency-groups]
dev = [
]

[project.scripts]
side-builder = "side_player.builder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/side_player"]
